--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -1,7 +1,7 @@
 
 ## 해외 비전트립 SEED 소그룹
-|회차|주차|날짜|시각|장소|활동내용|
-|:---:|:---:|:---:|:---:|:---:|:---:|
+|회차|주차|날짜|시각|장소|활동내용|PPT|
+|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
 |1|3|3/18|7:00 PM|Online|OT 및 기도편지 작성하기|
 |2|4|3/25|7:00 PM|Online|재정 마련하기(1)|
 |3|5|4/1|7:00 PM|Online|필리핀 IVCF 맞이할 준비하기(1)|
@@ -13,4 +13,4 @@
 |9|14|6/3|7:00 PM|Online|Online Meeting 3|
 |10|방학|7/6||Online|온라인 기도회|
 |-|방학|7/7-17||필리핀|필리핀 IVCF 경험하고 여행하기|
-|-|방학|8월 중||울산 및 경주|필리핀 IVCF 맞이하기|
+|-|방학|8월 첫째 주(예정)||울산 및 경주|필리핀 IVCF 맞이하기|
