--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -7,14 +7,23 @@
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|
 |-|-|-|-|-|[소개 PPT](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/0_Introduction.pdf)|해외 비전트립 소그룹 소개|
 |1|3|3/18|7:00 PM|기숙사 휴게실|[Week3](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/week3_OT%2C%20%EA%B8%B0%EB%8F%84%ED%8E%B8%EC%A7%80%20%EB%B0%8F%20%ED%9A%8C%EC%9D%98_20250318.pdf), [HW](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/0efa8373b1dfa40cde06be78f12b7f92eaf7f377/HW/HW_%ED%95%84%EB%A6%AC%ED%95%80%EA%B3%BC%20%ED%95%9C%EA%B5%AD%20%EC%A1%B0%EC%82%AC%ED%95%98%EA%B8%B0.pdf)|OT 및 기도편지 작성하기
-|2|4|3/25|7:00 PM|Online||재정 마련하기(1)|
-|3|5|4/1|7:00 PM|Online||필리핀 IVCF 맞이할 준비하기(1)|
-|4|6|4/8|7:00 PM|Online||재정 마련하기(2)|
-|5|9|4/29|7:00 PM|Online||필리핀 IVCF 맞이할 준비하기(2)|
-|6|11|5/13|7:00 PM|Online||필리핀/한국 조사한 것 발표하기|
+|2|4|3/25|7:00 PM|동아리방||재정 마련하기(1)|
+|3|5|4/1|7:00 PM|동아리방||필리핀 IVCF 맞이할 준비하기(1)|
+|4|6|4/8|7:00 PM|동아리방||재정 마련하기(2)|
+|5|9|4/29|7:00 PM|동아리방||필리핀 IVCF 맞이할 준비하기(2)|
+|6|11|5/13|7:00 PM|동아리방||필리핀/한국 조사한 것 발표하기|
 |7|12|5/20|7:00 PM|Online||Online Meeting 1|
 |8|13|5/27|7:00 PM|Online||Online Meeting 2|
 |9|14|6/3|7:00 PM|Online||Online Meeting 3|
 |10|방학|7/6||Online||온라인 기도회|
 |-|방학|7/7-17||필리핀||필리핀 IVCF 경험하고 여행하기|
 |-|방학|8월 중||울산 및 경주||필리핀 IVCF 맞이하기|
+
+## Flight Schedule
+|날짜|편명|비행시간|소요시간|항공사|금액|
+|:---:|:---:|:---:|:---:|:---:|---:|
+|7/7 (월)|7C2013|19:10 -> 22:20</br>ICN -> MNL|4h 10m|제주항공|146,100 KRW|
+|7/15 (화)|5J331|17:20 -> 18:40</br>MNL -> KLO|1h 20m|Cebu Pacific|32,094 KRW|
+|-|DG6243|17:30->18:55</br>MNL->MPH|1h 25m|Cebgo|40,061 KRW|
+|-|5J897|10:25->11:35</br>MNL->MPH|1h 10m|Cebu Pacific|40,995 KRW|
+|7/17 (목)|
