--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -7,7 +7,7 @@
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|
 |-|-|-|-|-|[소개 PPT](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/0_Introduction.pdf)|해외 비전트립 소그룹 소개|
 |1|3|3/18|7:00 PM|기숙사 휴게실|[Week3](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/week3_OT%2C%20%EA%B8%B0%EB%8F%84%ED%8E%B8%EC%A7%80%20%EB%B0%8F%20%ED%9A%8C%EC%9D%98_20250318.pdf), [HW](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/0efa8373b1dfa40cde06be78f12b7f92eaf7f377/HW/HW_%ED%95%84%EB%A6%AC%ED%95%80%EA%B3%BC%20%ED%95%9C%EA%B5%AD%20%EC%A1%B0%EC%82%AC%ED%95%98%EA%B8%B0.pdf)|OT 및 기도편지 작성하기
-|2|4|3/25|7:00 PM|동아리방|[Week4](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/week4_%EC%9E%AC%EC%A0%95%20%EC%A4%80%EB%B9%84%ED%95%98%EA%B8%B0%281%29_20250325.pdf)|재정 마련하기(1)|
+|2|4|3/25|7:00 PM|동아리방|[Week4](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/week4_%EC%9E%AC%EC%A0%95%20%EC%A4%80%EB%B9%84%ED%95%98%EA%B8%B0%281%29_20250325.pdf) \| [후원편지](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Letter/%ED%9B%84%EC%9B%90%EC%9A%94%EC%B2%AD%20%ED%8E%B8%EC%A7%80.pdf)|단체복 디자인 및 재정 마련하기(1)|
 |3|5|4/1|7:00 PM|동아리방||필리핀 IVCF 맞이할 준비하기(1)|
 |4|6|4/8|7:00 PM|동아리방||재정 마련하기(2)|
 |5|9|4/29|7:00 PM|동아리방||필리핀 IVCF 맞이할 준비하기(2)|
