--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -22,8 +22,8 @@
 ## Flight Schedule
 |날짜|편명|비행시간|소요시간|항공사|금액|
 |:---:|:---:|:---:|:---:|:---:|---:|
-|7/7 (월)|7C2013|19:10 -> 22:20</br>ICN -> MNL|4h 10m|제주항공|146,100 KRW|
-|7/15 (화)|5J331|17:20 -> 18:40</br>MNL -> KLO|1h 20m|Cebu Pacific|32,094 KRW|
+|7/9 (월)|7C2013|19:10 -> 22:20</br>ICN -> MNL|4h 10m|제주항공|146,100 KRW|
+|7/? ()|5J331|17:20 -> 18:40</br>MNL -> KLO|1h 20m|Cebu Pacific|32,094 KRW|
 |-|DG6243|17:30->18:55</br>MNL->MPH|1h 25m|Cebgo|40,061 KRW|
 |-|5J897|10:25->11:35</br>MNL->MPH|1h 10m|Cebu Pacific|40,995 KRW|
-|7/17 (목)|
+|7/19 (목)|7C2014|
