Fight schedule fixed

--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -16,14 +16,14 @@
 |8|13|5/27|7:00 PM|Online||Online Meeting 2|
 |9|14|6/3|7:00 PM|Online||Online Meeting 3|
 |10|방학|7/6||Online||온라인 기도회|
-|-|방학|7/7-17||필리핀||필리핀 IVCF 경험하고 여행하기|
-|-|방학|8월 중||울산 및 경주||필리핀 IVCF 맞이하기|
+|-|방학|7/9-19||필리핀||필리핀 IVCF 경험하고 여행하기|
+|-|방학|8/4-11||울산 및 경주||필리핀 IVCF 맞이하기|
 
 ## Flight Schedule
-|날짜|편명|비행시간|소요시간|항공사|금액|
-|:---:|:---:|:---:|:---:|:---:|---:|
-|7/9 (월)|[7C2013](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0709_ICN-MNL.pdf)|19:10 -> 22:20</br>ICN -> MNL|4h 10m|제주항공|148,400 KRW|
-|7/? ()|5J331|17:20 -> 18:40</br>MNL -> KLO|1h 20m|Cebu Pacific|32,094 KRW|
-|-|DG6243|17:30->18:55</br>MNL->MPH|1h 25m|Cebgo|40,061 KRW|
-|-|5J897|10:25->11:35</br>MNL->MPH|1h 10m|Cebu Pacific|40,995 KRW|
-|7/19 (목)|[7C2014](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0719_MNL-ICN.pdf)|23:20 -> 04:30</br>MNL -> ICN|4h 10m|제주항공|121,119 KRW|
+|날짜|편명|비행시간|소요시간|항공사|수하물|금액|
+|:---:|:---:|:---:|:---:|:---:|:---:|---:|
+|7/9 (수)|[7C2013](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0709_ICN-MNL.pdf)|19:10 -> 22:20</br>ICN -> MNL|4h 10m|제주항공|기내수하물 10kg</br>위탁수하물 15kg|148,400 KRW|
+|7/16 (수)|[5J911](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0716_MNL-MPH-MNL.pdf)|11:10 -> 12:20</br>MNL -> MPH|1h 10m|Cebu Pacific|기내수하물 7kg|54,450 KRW|
+|7/19 (토)|[5J908](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0716_MNL-MPH-MNL.pdf)|11:40 -> 13:00</br>MPH -> MNL|1h 20m|Cebu Pacific|기내수하물 7kg|54,450 KRW|
+||[5J759](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0719_MNL-CGK.pdf)|20:10 -> 23:30</br>MNL -> CGK|4h 20m|Cebu Pacific|기내수하물 7kg</br>위탁수하물 20kg|121,118 KRW|
+||[7C2014](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0719_MNL-ICN.pdf)|23:20 -> 04:30</br>MNL -> ICN|4h 10m|제주항공|기내수하물 10kg</br>위탁수하물 15kg|121,119 KRW|
