--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -16,7 +16,8 @@
 |8|13|5/27|7:00 PM|Online||Online Meeting 2|
 |9|14|6/3|7:00 PM|Online||Online Meeting 3|
 |10|방학|7/6||Online||온라인 기도회|
-|-|방학|7/9-19||필리핀||필리핀 IVCF 경험하고 여행하기|
+|-|방학|7/9-15||필리핀 마닐라 UPLB||필리핀 IVCF 경험하고 여행하기|
+|-|방학|7/16-19||필리핀 보라카이|[숙소예약확인서](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/%EC%88%99%EC%86%8C_Korean.pdf)|보라카이 여행|
 |-|방학|8/4-11||울산 및 경주||필리핀 IVCF 맞이하기|
 
 ## Flight Schedule
