--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -8,7 +8,7 @@
 |-|-|-|-|-|[소개 PPT](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/0_Introduction.pdf)|해외 비전트립 소그룹 소개|
 |1|3|3/18|7:00 PM|기숙사 휴게실|[Week3](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/week3_OT%2C%20%EA%B8%B0%EB%8F%84%ED%8E%B8%EC%A7%80%20%EB%B0%8F%20%ED%9A%8C%EC%9D%98_20250318.pdf), [HW](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/0efa8373b1dfa40cde06be78f12b7f92eaf7f377/HW/HW_%ED%95%84%EB%A6%AC%ED%95%80%EA%B3%BC%20%ED%95%9C%EA%B5%AD%20%EC%A1%B0%EC%82%AC%ED%95%98%EA%B8%B0.pdf)|OT 및 기도편지 작성하기
 |2|4|3/25|7:00 PM|동아리방|[Week4](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/PPT/week4_%EC%9E%AC%EC%A0%95%20%EC%A4%80%EB%B9%84%ED%95%98%EA%B8%B0%281%29_20250325.pdf) \| [후원편지](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Letter/%ED%9B%84%EC%9B%90%EC%9A%94%EC%B2%AD%20%ED%8E%B8%EC%A7%80.pdf)|단체복 디자인 및 재정 마련하기(1)|
-|3|5|4/1|7:00 PM|동아리방|[Week5](https://github.com/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/raw/refs/heads/main/PPT/week5_%ED%95%84%EB%A6%AC%ED%95%80%20%EC%B9%9C%EA%B5%AC%EB%93%A4%20%EB%A7%9E%EC%9D%B4%ED%95%A0%20%EC%A4%80%EB%B9%84%ED%95%98%EA%B8%B0_20250401.pptx)|필리핀 IVCF 맞이할 준비하기(1)|
+|3|5|4/1|7:00 PM|동아리방|[Week5](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/89dee639ecd95cd636d6b6328d8729472d78ee1c/PPT/week5_%ED%95%84%EB%A6%AC%ED%95%80%20%EC%B9%9C%EA%B5%AC%EB%93%A4%20%EB%A7%9E%EC%9D%B4%ED%95%A0%20%EC%A4%80%EB%B9%84%ED%95%98%EA%B8%B0_20250401.pdf)|필리핀 IVCF 맞이할 준비하기(1)|
 |4|6|4/8|7:00 PM|동아리방||재정 마련하기(2)|
 |5|9|4/29|7:00 PM|동아리방||필리핀 IVCF 맞이할 준비하기(2)|
 |6|11|5/13|7:00 PM|동아리방||필리핀/한국 조사한 것 발표하기|
@@ -17,11 +17,11 @@
 |9|14|6/3|7:00 PM|Online||Online Meeting 3|
 |10|방학|7/6||Online||온라인 기도회|
 |-|방학|7/9-15||필리핀 마닐라 UPLB||필리핀 IVCF 경험하고 여행하기|
-|-|방학|7/16-19||필리핀 보라카이|[숙소예약확인서](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/%EC%88%99%EC%86%8C_Korean.pdf)|보라카이 여행|
+|-|방학|7/16-19||필리핀 보라카이|숙소예약([한글](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/%EC%88%99%EC%86%8C_Korean.pdf), [영어](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/89dee639ecd95cd636d6b6328d8729472d78ee1c/Itinerary/%EC%88%99%EC%86%8C_English.pdf))|보라카이 여행|
 |-|방학|8/4-11||울산 및 경주||필리핀 IVCF 맞이하기|
 
 ## Flight Schedule
-|날짜|편명|비행시간|소요시간|항공사|수하물|금액|
+|날짜|편명|비행시간|소요시간|항공사|수하물|금액(1인 기준)|
 |:---:|:---:|:---:|:---:|:---:|:---:|---:|
 |7/9 (수)|[7C2013](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0709_ICN-MNL.pdf)|19:10 -> 22:20</br>ICN -> MNL|4h 10m|제주항공|기내수하물 10kg</br>위탁수하물 15kg|148,400 KRW|
 |7/16 (수)|[5J911](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0716_MNL-MPH-MNL.pdf)|11:10 -> 12:20</br>MNL -> MPH|1h 10m|Cebu Pacific|기내수하물 7kg|54,450 KRW|
