Itinerary for Minseok Song

--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -28,3 +28,5 @@
 |7/19 (토)|[5J908](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0716_MNL-MPH-MNL.pdf)|11:40 -> 13:00</br>MPH -> MNL|1h 20m|Cebu Pacific|기내수하물 7kg|54,450 KRW|
 ||[5J759](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0719_MNL-CGK.pdf)|20:10 -> 23:30</br>MNL -> CGK|4h 20m|Cebu Pacific|기내수하물 7kg</br>위탁수하물 20kg|121,118 KRW|
 ||[7C2014](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/main/Itinerary/0719_MNL-ICN.pdf)|23:20 -> 04:30</br>MNL -> ICN|4h 10m|제주항공|기내수하물 10kg</br>위탁수하물 15kg|121,119 KRW|
+
+E-ticket for Minseok Song: [ICN-MNL 왕복](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/3132b250bd67bd4259d6864c5b4511deaaf9da9f/Itinerary/0709_ICN-MNL-ICN_Minseok.pdf)(260,800 KRW), [MNL-MPH 왕복](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/3132b250bd67bd4259d6864c5b4511deaaf9da9f/Itinerary/0716_MNL-MPH-MNL_Minseok.pdf)(107,711 KRW)
