Finalize Schedule in Korea

--- a/2025-1-SEED.md
+++ b/2025-1-SEED.md
@@ -12,8 +12,8 @@
 |4|6|4/8|7:00 PM|동아리방|[감사편지](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/cf0ca7f13a76a235f284c649431dddbccba5a731/Letter/%ED%9B%84%EC%9B%90%EC%9E%90%EB%8B%98%EB%93%A4%EA%BB%98%20%EB%B3%B4%EB%82%B4%EB%8A%94%20%EA%B0%90%EC%82%AC%ED%8E%B8%EC%A7%80.pdf) |후원자님께 짧은 감사편지 쓰기</br>필리핀 IVCF 맞이할 준비하기(2)|
 |5|9|4/29|7:00 PM|동아리방|-|필리핀 IVCF 맞이할 준비하기(3)|
 |-|-|5/7|8:30 PM|동아리방|-|재정 마련하기(2)-단체복 배부 및 배송|
-|6|11|5/13|7:00 PM|동아리방||필리핀/한국 조사한 것 발표하기</br>한국에서의 일정 조정|
-|-|-|5/19|6:00 PM|신울산교회||영남동부 IVF 이사님들께 기도편지 드리기</br>및 비전트립 소개, 후원 요청|
+|6|11|5/13|7:00 PM|동아리방|[Timetable](https://nbviewer.org/github/51SB-ANTIMONY/2025-1_UNISTIVF-SEED/blob/4e4f937b2df1cca4eb74769e9f2b799ffcbc0c1b/Itinerary/%5BKR%5D%20Timetable_final.pdf)|필리핀/한국 조사한 것 발표하기</br>한국에서의 일정 조정|
+|-|-|5/19|6:00 PM|신울산교회|-|영남동부 IVF 이사님들께 기도편지 드리기</br>및 비전트립 소개, 후원 요청|
 |7|12|5/20|7:00 PM|Online||Online Meeting 1</br>"서로 알아가기"|
 |8|13|5/27|7:00 PM|Online||Online Meeting 2</br>"필리핀 소개"|
 |9|14|6/3|7:00 PM|Online||Online Meeting 3</br>"대한민국 소개"|
